--- a/src/components/layouts/UI/Button/Button.module.scss
+++ b/src/components/layouts/UI/Button/Button.module.scss
@@ -1,14 +1,14 @@
 .button {
-  font-weight: bolder;
-  font-size: 15px;
-  height: 30px;
+  padding: 10px 20px;
   border: none;
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 5px;
+  cursor: pointer;
 }
 
-.primariy {
+.primary {
   background-color: black;
   color: white;
 }
