--- a/src/components/layouts/UI/Input/Input.module.scss
+++ b/src/components/layouts/UI/Input/Input.module.scss
@@ -1,8 +1,6 @@
 .form {
-  width: 400px;
   display: flex;
   flex-direction: column;
-  gap: 10px;
   border: 1px solid;
   padding: 20px;
   box-shadow: 5px 10px;
@@ -11,6 +9,7 @@
     display: flex;
     flex-direction: column;
     border: none;
+    margin-bottom: 15px;
     gap: 5px;
   }
 
