--- a/src/components/fragment/SideBar/SideBar.module.scss
+++ b/src/components/fragment/SideBar/SideBar.module.scss
@@ -1,7 +1,11 @@
 .sideBar {
-  width: 250px;
-  background-color: #f8f9fa;
+  width: 20%;
+  background-color: #2b2b2b;
   border-right: 1px solid #dee2e6;
   height: 100vh;
   padding: 20px;
+
+  p {
+    color: #fff;
+  }
 }
