--- a/src/components/view/Admin/UserManagement/UserManagement.module.scss
+++ b/src/components/view/Admin/UserManagement/UserManagement.module.scss
@@ -8,9 +8,11 @@
     margin-top: 40px;
     th {
       padding: 10px;
+      border-bottom: 1px solid #ccc;
     }
     td {
       padding: 15px;
+      border-bottom: 1px solid #ccc;
     }
     thead {
       tr {
@@ -18,7 +20,7 @@
       }
     }
     tr:nth-child(even) {
-      background-color: #b1b1b1;
+      background-color: #ffffff;
     }
 
     &__action {
