--- a/src/components/view/user/Dashboard/Profile/Profile.module.scss
+++ b/src/components/view/user/Dashboard/Profile/Profile.module.scss
@@ -16,11 +16,21 @@
     }
     &__details {
       width: 80%;
-      height: 200px;
+      &__title {
+        font-size: large;
+        font-weight: bold;
+      }
       &__data {
         border: 1px solid #000000;
-        width: 100%;
-        height: 100%;
+        margin-top: 10px;
+        padding: 10px 15px;
+
+        Input {
+          border-radius: 5px;
+        }
+        Button {
+          border-radius: 5px;
+        }
       }
     }
   }
