--- a/src/components/view/user/Dashboard/Profile/Profile.module.scss
+++ b/src/components/view/user/Dashboard/Profile/Profile.module.scss
@@ -7,11 +7,39 @@
     margin-top: 20px;
     &__avatar {
       width: 20%;
-      height: 200px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      &__title {
+        font-size: large;
+        font-weight: bold;
+      }
       &__image {
-        border: 1px solid #000000;
-        width: 100%;
-        height: 100%;
+        //border: 1px solid #000000;
+        width: 150px;
+        height: auto;
+        border-radius: 50%;
+      }
+      &__label {
+        border: 1px solid #c2c2c2;
+        color: #3a3a3a;
+        border-radius: 3px;
+        padding: 5px 10px;
+        margin: 10px;
+        cursor: pointer;
+      }
+      label {
+        margin-top: 10px;
+        cursor: pointer;
+      }
+      p {
+        color: #3a3a3a;
+        font-size: 16px;
+      }
+      Input {
+        opacity: 0;
+        position: absolute;
+        z-index: -1;
       }
     }
     &__details {
