--- a/src/components/view/user/Dashboard/Profile/Profile.module.scss
+++ b/src/components/view/user/Dashboard/Profile/Profile.module.scss
@@ -10,6 +10,12 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+
       &__title {
         font-size: large;
         font-weight: bold;
@@ -25,8 +31,12 @@
         color: #3a3a3a;
         border-radius: 3px;
         padding: 5px 10px;
-        margin: 10px;
+        margin: 10px 0;
         cursor: pointer;
+      }
+      &__button {
+        padding-top: 10px;
+        width: 100%;
       }
       label {
         margin-top: 10px;
@@ -37,9 +47,9 @@
         font-size: 16px;
       }
       Input {
-        opacity: 0;
+        opacity: 1;
         position: absolute;
-        z-index: -1;
+        //z-index: -1;
       }
     }
     &__details {
@@ -52,13 +62,6 @@
         border: 1px solid #000000;
         margin-top: 10px;
         padding: 10px 15px;
-
-        Input {
-          border-radius: 5px;
-        }
-        Button {
-          border-radius: 5px;
-        }
       }
     }
   }
