--- a/src/components/view/user/Dashboard/Profile/Profile.module.scss
+++ b/src/components/view/user/Dashboard/Profile/Profile.module.scss
@@ -23,11 +23,12 @@
       &__image {
         //border: 1px solid #000000;
         width: 150px;
-        height: auto;
+        height: 150px;
         border-radius: 50%;
       }
       &__label {
         border: 1px solid #c2c2c2;
+        background-color: #c2c2c2;
         color: #3a3a3a;
         border-radius: 3px;
         padding: 5px 10px;
@@ -35,7 +36,7 @@
         cursor: pointer;
       }
       &__button {
-        padding-top: 10px;
+        margin-top: -10px;
         width: 100%;
       }
       label {
@@ -47,9 +48,9 @@
         font-size: 16px;
       }
       Input {
-        opacity: 1;
+        opacity: 0;
         position: absolute;
-        //z-index: -1;
+        z-index: -1;
       }
     }
     &__details {
