--- a/src/components/view/Admin/Produk/ModalAddProduct/ModalAddProduct.module.scss
+++ b/src/components/view/Admin/Produk/ModalAddProduct/ModalAddProduct.module.scss
@@ -1,3 +1,8 @@
+.header {
+  margin-top: 5px;
+  max-height: 70vh;
+  overflow-y: auto;
+}
 .form {
   &__stock {
     display: flex;
@@ -9,6 +14,8 @@
     }
   }
   &__button {
+    display: flex;
+    gap: 10px;
     &__add {
       display: flex;
       justify-content: center;
