--- a/src/components/layouts/UI/MultiInputFile/MultiInputFile.module.scss
+++ b/src/components/layouts/UI/MultiInputFile/MultiInputFile.module.scss
@@ -11,6 +11,11 @@
     text-align: center;
     transition: all 0.3s ease;
 
+    i {
+      font-size: 62px;
+      color: #666;
+    }
+
     p {
       margin: 5px 0;
       font-size: 14px;
@@ -35,7 +40,7 @@
 
   &__preview {
     margin-top: 15px;
-    padding: 15px;
+    //padding: 15px;
     background-color: #f5f5f5;
     border-radius: 4px;
 
@@ -105,6 +110,23 @@
     border-radius: 4px;
     transition: background-color 0.2s ease;
     width: 100%;
+
+    &:hover {
+      background-color: #a02834;
+    }
+  }
+  &__removeAllBtn {
+    background: #dc3545;
+    border: none;
+    color: white;
+    cursor: pointer;
+    font-size: 14px;
+    padding: 4px 10px;
+    border-radius: 4px;
+    transition: background-color 0.2s ease;
+    width: 50%;
+    margin-top: 15px;
+    translate: 50%;
 
     &:hover {
       background-color: #a02834;
