--- a/src/components/view/Admin/Produk/ModalAddProduct/ModalAddProduct.module.scss
+++ b/src/components/view/Admin/Produk/ModalAddProduct/ModalAddProduct.module.scss
@@ -11,6 +11,7 @@
 
 .form {
   &__section {
+    gap: 18px;
     margin-bottom: 18px;
     padding: 14px;
     background: #fafafa;
@@ -25,11 +26,19 @@
     color: #222;
   }
 
+  &__sectionInner {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 18px;
+  }
+
   &__label {
-    font-size: 13px;
-    color: #444;
-    margin-bottom: 8px;
+    font-size: 14px;
+    font-weight: 500;
+    color: #555;
+    margin-bottom: 10px;
     display: block;
+    cursor: pointer;
   }
 
   &__stockContainer {
@@ -56,6 +65,7 @@
     display: flex;
     gap: 10px;
     margin-top: 12px;
+    justify-content: flex-end;
 
     &__add {
       background: #198754;
@@ -90,12 +100,19 @@
   }
 
   &__multiInputFile {
-    margin-top: 10px;
+    //margin-top: -6px;
+  }
+
+  &__inputFile {
+    //opacity: 0;
+    //position: absolute;
+    //z-index: -1;
+    height: auto;
   }
 
   &__imageSection {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 0.8fr 1fr;
     gap: 18px;
     align-items: start;
   }
@@ -114,16 +131,45 @@
     border: 1px solid #e6e6e6;
   }
 
+  &__imageLabel {
+    display: block;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+  }
+
   &__imagePreview {
     object-fit: cover;
     width: 100%;
     height: 100%;
   }
 
+  &__imageRemove {
+    background: #dc3545;
+    border: none;
+    color: white;
+    cursor: pointer;
+    font-size: 14px;
+    padding: 4px 10px;
+    border-radius: 4px;
+    transition: background-color 0.2s ease;
+    width: 50%;
+    margin-top: 15px;
+
+    &:hover {
+      background-color: #a02834;
+    }
+  }
+
   &__uploadHelp {
     display: flex;
     flex-direction: column;
     gap: 10px;
+  }
+
+  &__uploadHelps {
+    display: flex;
+    flex-direction: column;
   }
 
   &__helpText {
