--- a/src/components/layouts/UI/MultiInputFile/MultiInputFile.module.scss
+++ b/src/components/layouts/UI/MultiInputFile/MultiInputFile.module.scss
@@ -11,9 +11,14 @@
     text-align: center;
     transition: all 0.3s ease;
 
-    i {
-      font-size: 62px;
-      color: #666;
+    &__addFile {
+      padding: 15px 20px;
+      border: 2px dashed #ccc;
+      border-radius: 8px;
+      i {
+        font-size: 62px;
+        color: #666;
+      }
     }
 
     p {
@@ -40,7 +45,7 @@
 
   &__preview {
     margin-top: 15px;
-    //padding: 15px;
+    padding: 5px;
     background-color: #f5f5f5;
     border-radius: 4px;
 
